Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8477

QLocalServer::waitForNewConnection broken on Windows when used in a different thread

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.1
    • 4.6.0
    • Network
    • None
    • cbe3425a3bd226c61c94f92c521dc5c9b090ef96

      To reproduce, create a QLocalServer in a thread, listen and call waitForNewConnection(-1).
      This function will never return. Even when a client connects.
      See the attached sample program.

      That's probably the cause of the sometimes failing tst_qlocalsocket::threadedConnection.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes