QLocalServer: make many simultaneous connection attempts work on Windows

Don't call GetOverlappedResult if ConnectNamedPipe connects instantly.

Autotest: tst_qlocalsocket::threadedConnection
Task-number: QTBUG-8477
Done-with: ossi
Reviewed-by: ossi